[package]
name = "protocrate"
version = "0.1.1"
authors = ["Einride <open-source@einride.tech>"]
description = "Tool for generating a Rust crate from a tree of protobuf files."
categories = ["command-line-utilities", "network-programming"]
keywords = ["grpc", "protobuf"]
repository = "https://github.com/einride/protocrate-rs"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1.0.92"
codegen = "0.2.0"
prost-build = "0.13.3"
structopt = "0.3.26"
walkdir = "2.5.0"
tonic-build = {version = "0.12.3", default-features = false, features = ["prost", "transport"] }
prost-reflect-build = "0.14.0"

[dev-dependencies]
tempfile = "3.10.1"
